[package]
name = "tileset"
version = "0.0.4"
authors = ["Aster <192607617@qq.com>"]
description = "Tailset definition, and supports importing multiple formats"
repository = "https://github.com/oovm/Tilemap"
documentation = "https://docs.rs/tileset"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
dashmap = "5.4.0"
ndarray = "0.15.6"
rand_core = "0.6.4"
image = "0.24.6"
serde = { version = "1.0.160", features = ["serde_derive"] }
serde_json = { version = "1.0.96" }
rc-zip = { version = "2.0.1", optional = true }

[dev-dependencies]

[features]
default = []

