[package]
name = "tilemap"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/Tilemap"
documentation = "https://docs.rs/tilemap"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
tracing = "0.1.37"
crossbeam-skiplist = "0.1.1"
ndarray = "0.15.6"
taxicab-map = "0.1.3"


[dependencies.tileset]
version = "0.0.*"
path = "../tilemap-atlas"
features = []

[dev-dependencies]

[features]
default = ["serde"]
serde = ["ndarray/serde"]
